--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,16 @@
 {
-    "extends": "airbnb"
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": [
+    "airbnb-base"
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {
+  }
 }
